# 3DEngineCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/core/: input.cpp  util.cpp
src/rendering/: window.cpp  window.h
